@@ -2,10 +2,11 @@ package com.auction.auth.jwtools;
 
 import com.auction.users.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
     private static final long serialVersionUID = 1L;
@@ -23,8 +24,13 @@ public class UserDetailsImpl implements UserDetails {
     }
 
     public static UserDetailsImpl JPAtoUserDetails(User user) {
-        return new UserDetailsImpl(user.getUsername(), user.getDisplayName(), user.getBalance(),
-                Collections.emptyList());
+        List<GrantedAuthority> authorities;
+        if ("admin".equals(user.getUsername())) {
+            authorities = List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        } else {
+            authorities = List.of();
+        }
+        return new UserDetailsImpl(user.getUsername(), user.getDisplayName(), user.getBalance(), authorities);
     }
 
     public String getUsername() {
